--- a/index.html
+++ b/index.html
@@ -3,18 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto EDOO</title>
+    <title>Projeto EDOO - Dijkstra</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 10px 20px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        section {
+            padding: 20px;
+            margin: 20px;
+        }
+        h2 {
+            color: #4CAF50;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        ul li {
+            margin: 5px 0;
+        }
+        .content-box {
+            background-color: white;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .content-box img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+        }
+        .links {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Bem-vindo ao Projeto EDOO</h1>
-    <p>Este projeto implementa o algoritmo de Dijkstra para encontrar o menor caminho em grafos.</p>
-    <h2>Características do projeto:</h2>
-    <ul>
-        <li>Implementação em C++</li>
-        <li>Uso de programação orientada a objetos (OOP)</li>
-        <li>Grafo representado por listas de adjacência</li>
-    </ul>
-    <h3>Repositório no GitHub:</h3>
-    <a href="https://github.com/BrunoMaximo5/Projeto-EDOO" target="_blank">Clique aqui</a>
+    <header>
+        <h1>Bem-vindo ao Projeto EDOO - Dijkstra</h1>
+        <p>Implementação do algoritmo de Dijkstra para encontrar o menor caminho em grafos, utilizando C++ e programação orientada a objetos (OOP).</p>
+    </header>
+
+    <section>
+        <h2>Características do projeto:</h2>
+        <div class="content-box">
+            <ul>
+                <li>Implementação do algoritmo de Dijkstra em C++.</li>
+                <li>Uso de programação orientada a objetos (OOP).</li>
+                <li>Representação do grafo com listas de adjacência.</li>
+                <li>Estrutura de classes para nós e grafos, com manipulação de arestas.</li>
+                <li>Busca do menor caminho entre dois nós com exibição do custo total.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <h2>Visualizações</h2>
+        <div class="content-box">
+            <img src="diagrama.jpg" alt="Diagrama do Algoritmo de Dijkstra">
+            <p>Acima, temos um diagrama do algoritmo de Dijkstra implementado no projeto.</p>
+        </div>
+    </section>
+
+    <section>
+        <h2>Links importantes:</h2>
+        <div class="links">
+            <ul>
+                <li><a href="https://github.com/BrunoMaximo5/Projeto-EDOO" target="_blank">Repositório no GitHub</a></li>
+                <li><a href="relatorio.pdf" target="_blank">Relatório do Projeto (PDF)</a></li>
+                <li><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx" target="_blank">Vídeo de Demonstração</a></li>
+            </ul>
+        </div>
+    </section>
+
+    <section>
+        <h2>Resumo do Algoritmo</h2>
+        <div class="content-box">
+            <p>O algoritmo de Dijkstra implementado neste projeto encontra o menor caminho entre dois nós em um grafo ponderado, utilizando uma estrutura eficiente de filas de prioridade.</p>
+        </div>
+    </section>
+
+    <footer style="background-color: #333; color: white; padding: 10px 20px; text-align: center;">
+        <p>&copy; 2025 Projeto EDOO - Desenvolvido por Bruno Máximo</p>
+    </footer>
 </body>
 </html>
