--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <header>
-        <h1>Bem-vindo ao Projeto EDOO - Dijkstra</h1>
+        <h1>Projeto EDOO - Dijkstra</h1>
         <p>Implementação do algoritmo de Dijkstra para encontrar o menor caminho em grafos, utilizando C++ e Programação Orientada a Objetos (POO).</p>
     </header>
 
@@ -138,16 +138,23 @@
         </div>
     </section>
 
-    <nav>
-        <h2>Links importantes:</h2>
-        <div class="links">
-            <ul>
-                <li><a href="https://github.com/BrunoMaximo5/Projeto-EDOO" class="btn" target="_blank" rel="noopener noreferrer">Repositório no GitHub</a></li>
-                <li><a href="relatorio.pdf" class="btn" target="_blank">Relatório do Projeto (PDF)</a></li>
-                <li><a href="https://www.youtube.com/watch?v=xxxxxxxxxxx" class="btn" target="_blank" rel="noopener noreferrer">Vídeo de Demonstração</a></li>
-            </ul>
+    <section>
+        <h2>Recursos do Projeto</h2>
+        <div class="content-box">
+            <p>Acesse os principais materiais relacionados ao projeto:</p>
+            <div class="link-container">
+                <a href="https://github.com/BrunoMaximo5/Projeto-EDOO" target="_blank" class="btn-link">
+                    🔗 Repositório no GitHub
+                </a>
+                <a href="relatorio.pdf" target="_blank" class="btn-link">
+                    📄 Relatório do Projeto (PDF)
+                </a>
+                <a href="https://www.youtube.com/watch?v=xxxxxxxxxxx" target="_blank" class="btn-link">
+                    🎥 Vídeo de Demonstração
+                </a>
+            </div>
         </div>
-    </nav>
+    </section>
 
     <section>
         <h2>Resumo do Algoritmo</h2>
